--- a/package.json
+++ b/package.json
@@ -6,27 +6,31 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --manual",
-    "start": "remix-serve ./build/index.js",
+    "start": "node server.js",
     "typecheck": "tsc"
   },
   "dependencies": {
     "@remix-run/css-bundle": "^2.6.0",
+    "@remix-run/express": "^2.6.0",
     "@remix-run/netlify": "^2.6.0",
     "@remix-run/node": "^2.6.0",
     "@remix-run/react": "^2.6.0",
     "@remix-run/serve": "^2.6.0",
+    "express": "^4.18.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.6.0",
+    "@types/express": "^4.17.19",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
