--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual",
+    "build": "npm run build:css && remix build",
+    "build:css": "tailwindcss -m -i ./styles/tailwind.css -o ./public/build/tailwind.css",
+    "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
+    "dev:css": "tailwindcss -w -i ./styles/tailwind.css -o ./public/build/tailwind.css",
     "start": "node server.js",
     "typecheck": "tsc"
   },
@@ -27,6 +29,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^8.2.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6",
