--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,36 @@
-node_modules
-.cache
+# Cursor editor files
+.cursor/
+.cursorrules
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
 /build
-/public/build
+/dist
+.cache
+
+# Environment variables
 .env
-.netlify
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Mac OS
+.DS_Store
+
+# Editor directories and files
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # Local Netlify folder
 .netlify
@@ -18,5 +45,4 @@ node_modules
 *.sw?
 
 # OS files
-.DS_Store
 Thumbs.db
