--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.7.0",
     "@remix-run/css-bundle": "^2.3.1",
     "@remix-run/express": "^2.3.1",
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
+    "@stripe/agent-toolkit": "^0.5.2",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
